--- a/auth_proxy/Cargo.toml
+++ b/auth_proxy/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
+hyper = { version = "0.14.27", features = ["client"] }
 tokio = { version = "1.34.0", features = ["full"] }
+tower = "0.4.13"
+tracing = "0.1.40"
