--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,13 @@ services:
       context: .
       dockerfile: ./docker/frontend/Dockerfile
     ports:
-      - ${FRONTEND_PORT}:8080
+      - ${FRONTEND_PORT}:9000
     volumes:
       - ./frontend:/app
     working_dir: /app
     command: "trunk serve --address 0.0.0.0 --release"
     depends_on:
       - backend
-      - auth-proxy
     tty: true
 
   ##############################################################################
@@ -32,13 +31,12 @@ services:
       context: .
       dockerfile: ./docker/backend/Dockerfile
     ports:
-      - ${BACKEND_PORT}:9000
+      - ${BACKEND_PORT}:9001
     volumes:
       - ./backend:/app
     working_dir: /app
     depends_on:
       - postgres
-      - auth-proxy
     tty: true
 
   ##############################################################################
@@ -50,13 +48,15 @@ services:
       context: .
       dockerfile: ./docker/auth_proxy/Dockerfile
     ports:
-      - ${AUTH_PROXY_PORT}:9001
+      - ${AUTH_PROXY_PORT}:8080
     volumes:
       - ./auth_proxy:/app
     working_dir: /app
+    environment:
+      PORT: ${AUTH_PROXY_PORT}
     depends_on:
       - postgres
-    command: "cargo run"
+      - frontend
     tty: true
 
   ##############################################################################
