--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ MIGRATION_PORT=5433
 PROXY_URL=http://frontend:9000
 
 # Database
-DB_HOST=localhost
+DB_HOST=postgres
 DB_NAME=meower
 DB_USER=meower
 DB_PASSWORD=meower
