--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,10 @@ services:
       - ./backend:/app
       - ./migration:/migration
       - ./entity:/entity
+      - ./install:/install
     working_dir: /app
+    environment:
+      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
     command: "cargo watch -x run"
     depends_on:
       - migration
