--- a/auth_proxy/Cargo.toml
+++ b/auth_proxy/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
+askama = "0.12.1"
 axum = "0.6.20"
 hyper = { version = "0.14.27", features = ["client"] }
 tokio = { version = "1.34.0", features = ["full"] }
