feat: Add Redis container and insert session layer

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,10 @@ BACKEND_PORT=9001
 AUTH_PROXY_PORT=8080
 POSTGRES_PORT=5432
 MIGRATION_PORT=5433
+REDIS_PORT=6379
 
-PROXY_URL=http://frontend:9000
+PROXY_URL=http://frontend
+REDIS_URL=redis://redis
 
 # Database
 DB_HOST=postgres
