--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,3 +1,6 @@
+################################################################################
+# Sycamore frontend server.
+################################################################################
 FROM rust:1.73.0 AS base
 
 RUN apt-get update \
