--- a/docker/redis/Dockerfile
+++ b/docker/redis/Dockerfile
@@ -1,8 +1,4 @@
 ################################################################################
-# Reverse proxy server for authentication.
+# Redis cluster.
 ################################################################################
-FROM rust:1.73.0 AS base
-
-RUN apt-get update
-
-RUN cargo install --locked cargo-watch
+FROM redis:7.2 AS base
