--- a/auth_proxy/Cargo.toml
+++ b/auth_proxy/Cargo.toml
@@ -10,4 +10,5 @@ axum = "0.6.20"
 hyper = { version = "0.14.27", features = ["client"] }
 tokio = { version = "1.34.0", features = ["full"] }
 tower = "0.4.13"
+tower-sessions = { version = "0.5.1", features = ["redis-store"] }
 tracing = "0.1.40"
