--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -1,3 +1,6 @@
+################################################################################
+# Axum backend server.
+################################################################################
 FROM rust:1.73.0 AS base
 
 RUN apt-get update
