--- a/docker/migration/Dockerfile
+++ b/docker/migration/Dockerfile
@@ -1,3 +1,6 @@
+################################################################################
+# Database migration.
+################################################################################
 FROM rust:1.73.0 AS base
 
 RUN apt-get update
