--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -1,1 +1,4 @@
+################################################################################
+# PostgreSQL database.
+################################################################################
 FROM postgres:11.1 AS base
