--- a/auth_proxy/Cargo.toml
+++ b/auth_proxy/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.34.0", features = ["full"] }
 tower = "0.4.13"
 tower-sessions = { version = "0.5.1", features = ["redis-store"] }
 tracing = "0.1.40"
+uuid = "1.5.0"
