feat: Add JWT to cookie on login

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,37 @@
+################################################################################
 # Application
+################################################################################
+
+DEBUG_MODE=true
+
+# Ports
 FRONTEND_PORT=9000
 BACKEND_PORT=9001
 AUTH_PROXY_PORT=8080
 POSTGRES_PORT=5432
 MIGRATION_PORT=5433
-REDIS_PORT=6379
 
+# Endpoints
 PROXY_URL=http://frontend
-REDIS_URL=redis://redis
 
+
+################################################################################
+# JWT Auth
+#
+# JWT_EXPIRES is in seconds.
+################################################################################
+
+JWT_ISSUE=meower
+JWT_SUBJECT=meower_auth
+JWT_AUDIENCE=meower_auth,meower_backend
+JWT_SECRET=dummy_secret
+JWT_EXPIRES=3600
+
+
+################################################################################
 # Database
+################################################################################
+
 DB_HOST=postgres
 DB_NAME=meower
 DB_USER=meower
