--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,6 @@ services:
     command: "cargo watch -x run"
     depends_on:
       - postgres
-      - redis
     tty: true
 
   ##############################################################################
@@ -61,9 +60,14 @@ services:
       - ./entity:/entity
     working_dir: /app
     environment:
+      DEBUG_MODE: ${DEBUG_MODE}
       AUTH_PROXY_PORT: ${AUTH_PROXY_PORT}
       PROXY_URL: ${PROXY_URL}:${FRONTEND_PORT}
-      REDIS_URL: ${REDIS_URL}:${REDIS_PORT}
+      JWT_ISSUE: ${JWT_ISSUE}
+      JWT_SUBJECT: ${JWT_SUBJECT}
+      JWT_AUDIENCE: ${JWT_AUDIENCE}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRES: ${JWT_EXPIRES}
     command: "cargo watch -x run"
     depends_on:
       - postgres
@@ -110,16 +114,3 @@ services:
     depends_on:
       - postgres
     tty: true
-
-  ##############################################################################
-  # Redis
-  ##############################################################################
-  redis:
-    container_name: meower_redis
-    build:
-      context: .
-      dockerfile: ./docker/redis/Dockerfile
-    ports:
-      - ${REDIS_PORT}:6379
-    volumes:
-      - ./docker/redis/data:/data
