--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ PROXY_URL=http://frontend
 
 JWT_ISSUE=meower
 JWT_SUBJECT=meower_auth
-JWT_AUDIENCE=meower_auth,meower_backend
+JWT_AUDIENCE=http://localhost:8080
 JWT_SECRET=dummy_secret
 JWT_EXPIRES=3600
 
