feat: Implement password hashing

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # Application
 ################################################################################
 
+# Debug mode
 DEBUG_MODE=true
 
 # Ports
@@ -16,6 +17,13 @@ PROXY_URL=http://frontend
 
 
 ################################################################################
+# Password hashing
+################################################################################
+
+ARGON2_PHC_SALT=vdWiJxX0iWZI2ncJ # Dummy salt for development
+
+
+################################################################################
 # JWT Auth
 #
 # JWT_EXPIRES is in seconds.
@@ -24,7 +32,7 @@ PROXY_URL=http://frontend
 JWT_ISSUE=meower
 JWT_SUBJECT=meower_auth
 JWT_AUDIENCE=meower
-JWT_SECRET=dummy_secret
+JWT_SECRET=dummy_secretx # Dummy secret for development
 JWT_EXPIRES=3600
 
 
