--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
     working_dir: /app
     environment:
       DEBUG_MODE: ${DEBUG_MODE}
+      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
       AUTH_PROXY_PORT: ${AUTH_PROXY_PORT}
       PROXY_URL: ${PROXY_URL}:${FRONTEND_PORT}
       JWT_ISSUE: ${JWT_ISSUE}
