--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -9,4 +9,4 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 RUN rustup target add wasm32-unknown-unknown \
-    && cargo install --locked trunk
+    && cargo install --locked trunk grass
