--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 
 [dependencies]
+async-trait = "0.1.74"
+meower_utility = { version = "0.1.0", path = "../common" }
 sea-orm = { version = "0.12.6" }
