--- a/docker/auth_proxy/Dockerfile
+++ b/docker/auth_proxy/Dockerfile
@@ -5,4 +5,4 @@ FROM rust:1.73.0 AS base
 
 RUN apt-get update
 
-RUN cargo install --locked cargo-watch
+RUN cargo install --locked cargo-watch cargo-udeps cargo-crev cargo-audit
