--- a/docker/migration/Dockerfile
+++ b/docker/migration/Dockerfile
@@ -5,4 +5,4 @@ FROM rust:1.73.0 AS base
 
 RUN apt-get update
 
-RUN cargo install --locked sea-orm-cli
+RUN cargo install --locked sea-orm-cli cargo-udeps cargo-crev cargo-audit
