chore: Add development tools

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,27 @@ POSTGRES_PORT=5432
 MIGRATION_PORT=5433
 
 # Endpoints
-PROXY_URL=http://frontend
+PROXY_URL=http://frontend:9000
+
+
+################################################################################
+# Password hashing
+################################################################################
+
+ARGON2_PHC_SALT=vdWiJxX0iWZI2ncJ # Dummy salt for development
+
+
+################################################################################
+# JWT Auth
+#
+# JWT_EXPIRES is in seconds.
+################################################################################
+
+JWT_ISSUE=meower
+JWT_SUBJECT=meower_auth
+JWT_AUDIENCE=meower
+JWT_SECRET=dummy_secretx # Dummy secret for development
+JWT_EXPIRES=3600
 
 
 ################################################################################
@@ -24,3 +44,4 @@ DB_HOST=postgres
 DB_NAME=meower
 DB_USER=meower
 DB_PASSWORD=meower
+DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
