--- a/docker/service/backend/Dockerfile
+++ b/docker/service/backend/Dockerfile
@@ -1,8 +1,4 @@
 ################################################################################
-# Database migration.
+# Axum backend server.
 ################################################################################
-FROM rust:1.73.0 AS base
-
-RUN apt-get update
-
-RUN cargo install --locked sea-orm-cli cargo-udeps cargo-crev cargo-audit
+FROM rust_base AS base
