--- a/docker/service/frontend/Dockerfile
+++ b/docker/service/frontend/Dockerfile
@@ -1,12 +1,11 @@
 ################################################################################
 # Sycamore frontend server.
 ################################################################################
-FROM rust:1.73.0 AS base
+FROM rust_base AS base
 
-RUN apt-get update \
-    && apt-get install -y libssl-dev pkg-config \
+RUN apt-get install -y libssl-dev pkg-config \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN rustup target add wasm32-unknown-unknown \
-    && cargo install --locked trunk grass cargo-udeps cargo-crev cargo-audit
+RUN rustup target add wasm32-unknown-unknown
+RUN cargo install --locked trunk grass
