--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 
 [dependencies]
+meower_utility = { version = "0.1.0", path = "../common" }
 meower_entity = { version = "0.1.0", path = "../entity" }
 tokio = { version = "1.34.0", features = ["full"] }
 sea-orm-migration = { version = "0.12.6", features = [
