--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
     ports:
       - ${POSTGRES_PORT}:5432
     volumes:
-      - ./docker/postgres/data:/var/lib/postgresql/data
+      - ./docker/service/postgres/data:/var/lib/postgresql/data
     env_file: .env
     environment:
       POSTGRES_DB: ${DB_NAME}
