--- a/.env.example
+++ b/.env.example
@@ -17,10 +17,22 @@ PROXY_URL=http://frontend:9000
 
 
 ################################################################################
-# Password hashing
+# Database
 ################################################################################
 
-ARGON2_PHC_SALT=vdWiJxX0iWZI2ncJ # Dummy salt for development
+DB_HOST=postgres
+DB_NAME=meower
+DB_USER=meower
+DB_PASSWORD=meower
+DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
+
+
+################################################################################
+# Locale
+################################################################################
+
+LOCALE_PATH=/common/locale
+FALLBACK_LOCALE=en
 
 
 ################################################################################
@@ -37,11 +49,7 @@ JWT_EXPIRES=3600
 
 
 ################################################################################
-# Database
+# Password hashing
 ################################################################################
 
-DB_HOST=postgres
-DB_NAME=meower
-DB_USER=meower
-DB_PASSWORD=meower
-DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
+ARGON2_PHC_SALT=vdWiJxX0iWZI2ncJ # Dummy salt for development
