--- a/auth_proxy/Cargo.toml
+++ b/auth_proxy/Cargo.toml
@@ -20,3 +20,5 @@ sea-orm = { version = "0.12.6", features = [
     "sqlx-postgres"
 ]}
 sea-query = "0.30.3"
+rust-i18n = "2.3.0"
+accept-language = "3.1.0"
