--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,3 +11,7 @@ jsonwebtoken = "9.1.0"
 chrono = "0.4.31"
 serde = "1.0.193"
 uuid = { version = "1.6.1", features = ["v4"] }
+serde_json = "1.0.108"
+serde_yaml = "0.9.27"
+toml = "0.8.8"
+globwalk = "0.8.1"
