--- a/dev/install/Cargo.toml
+++ b/dev/install/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "meower_migration"
+name = "meower_install"
 version = "0.1.0"
 edition = "2021"
 
 
 [dependencies]
+meower_migration = { version = "0.1.0", path = "../migration" }
+meower_utility = { version = "0.1.0", path = "../common" }
+meower_entity = { version = "0.1.0", path = "../entity" }
 tokio = { version = "1.34.0", features = ["full"] }
 sea-orm-migration = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
@@ -14,3 +17,8 @@ sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
     "sqlx-postgres"
 ]}
+
+
+[[bin]]
+name = "install_test_data"
+path = "src/install_test_data.rs"
