--- a/dev/.env.example
+++ b/dev/.env.example
@@ -8,12 +8,12 @@ DEBUG_MODE=true
 # Ports
 FRONTEND_PORT=9000
 BACKEND_PORT=9001
-AUTH_PROXY_PORT=8080
+AUTH_SERVER_PORT=8080
 POSTGRES_PORT=5432
 MIGRATION_PORT=5433
 
 # Endpoints
-PROXY_URL=http://frontend:9000
+APPLICATION_URL=http://frontend:9000
 
 
 ################################################################################
