--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -13,13 +13,7 @@ services:
       context: .
       dockerfile: ./docker/service/frontend/Dockerfile
     volumes:
-      - ./auth_proxy:/auth_proxy
-      - ./backend:/backend
-      - ./common:/common
-      - ./entity:/entity
-      - ./frontend:/frontend
-      - ./migration:/migration
-      - ./Cargo.toml:/Cargo.toml
+      - ./system:/system
     env_file: .env
     tty: true
 
@@ -34,10 +28,11 @@ services:
     ports:
       - ${FRONTEND_PORT}:9000
     volumes:
-      - ./frontend:/app
-      - ./common:/common
+      - ./system/service/assets:/service/assets
+      - ./system/service/core:/service/core
+      - ./system/service/frontend:/service/frontend
     env_file: .env
-    working_dir: /app
+    working_dir: /service/frontend
     command: "trunk serve --address 0.0.0.0 --release"
     depends_on:
       - backend
@@ -54,34 +49,34 @@ services:
     ports:
       - ${BACKEND_PORT}:9001
     volumes:
-      - ./backend:/app
-      - ./migration:/migration
-      - ./entity:/entity
-      - ./common:/common
+      - ./system/service/assets:/service/assets
+      - ./system/service/core:/service/core
+      - ./system/service/backend:/service/backend
+      - ./system/datastore:/datastore
     env_file: .env
-    working_dir: /app
+    working_dir: /service/backend
     command: "cargo watch -x run"
     depends_on:
       - postgres
     tty: true
 
   ##############################################################################
-  # Authentication proxy server
+  # Authentication server
   ##############################################################################
-  auth-proxy:
-    container_name: meower_auth_proxy
+  auth-server:
+    container_name: meower_auth_server
     build:
       context: .
-      dockerfile: ./docker/service/auth_proxy/Dockerfile
+      dockerfile: ./docker/service/auth_server/Dockerfile
     ports:
-      - ${AUTH_PROXY_PORT}:8080
+      - ${AUTH_SERVER_PORT}:8080
     volumes:
-      - ./auth_proxy:/app
-      - ./migration:/migration
-      - ./entity:/entity
-      - ./common:/common
+      - ./system/assets:/assets
+      - ./system/auth_server:/auth_server
+      - ./system/core:/core
+      - ./system/datastore:/datastore
     env_file: .env
-    working_dir: /app
+    working_dir: /auth_server
     command: "cargo watch -x run"
     depends_on:
       - postgres
@@ -121,11 +116,9 @@ services:
     ports:
       - ${MIGRATION_PORT}:5433
     volumes:
-      - ./migration:/migration
-      - ./entity:/entity
-      - ./common:/common
+      - ./system/datastore:/datastore
     env_file: .env
-    working_dir: /
+    working_dir: /datastore
     depends_on:
       - postgres
     tty: true
@@ -139,12 +132,9 @@ services:
       context: .
       dockerfile: ./docker/service/install/Dockerfile
     volumes:
-      - ./install:/install
-      - ./migration:/migration
-      - ./entity:/entity
-      - ./common:/common
+      - ./system/datastore:/datastore
     env_file: .env
-    working_dir: /
+    working_dir: /datastore
     depends_on:
       - postgres
     tty: true
