--- a/dev/docker/service/auth_server/Dockerfile
+++ b/dev/docker/service/auth_server/Dockerfile
@@ -1,4 +1,4 @@
 ################################################################################
-# Reverse proxy server for authentication.
+# Authentication server.
 ################################################################################
 FROM rust_base AS base
