--- a/dev/system/datastore/entity/Cargo.toml
+++ b/dev/system/datastore/entity/Cargo.toml
@@ -10,3 +10,4 @@ chrono = "0.4.31"
 meower_core = { version = "0.1.0", path = "../../core" }
 sea-orm = { version = "0.12.6" }
 sea-query = "0.30.3"
+argon2 = { version = "0.5.2", features = ["password-hash"] }
