fix: Fix the auxiliary tools to work properly

--- a/dev/Makefile
+++ b/dev/Makefile
@@ -34,6 +34,9 @@ logs:
 # Containers
 ################################################################################
 
+dev:
+	@sudo docker-compose exec dev bash
+
 auth:
 	@sudo docker-compose exec auth-server bash
 
@@ -62,47 +65,71 @@ install:
 # Convert SCSS to CSS
 sass:
 	@echo "===== Converting SCSS to CSS ====="
-	@sudo docker-compose exec frontend \
-		grass ../common/assets/scss/style.scss ../common/assets/css/style.css
+	@sudo docker-compose exec dev \
+		grass /system/assets/scss/style.scss /system/assets/css/style.css
 	@echo "===== Finish ====="
 
 # Check the dependencies
 udeps:
-	@echo "===== Checking dependencies ====="
+	@echo "===== Checking core dependencies ====="
 	@sudo docker-compose exec dev \
-		cargo +nightly udeps --workspace
+		bash -c 'cd /system/core && cargo +nightly udeps'
+	@echo "===== Finish ====="
+	@echo "===== Checking auth_server dependencies ====="
+	@sudo docker-compose exec dev \
+		bash -c 'cd /system/auth_server && cargo +nightly udeps'
+	@echo "===== Finish ====="
+	@echo "===== Checking datastore dependencies ====="
+	@sudo docker-compose exec dev \
+		bash -c 'cd /system/datastore && cargo +nightly udeps --workspace'
+	@echo "===== Finish ====="
+	@echo "===== Checking service dependencies ====="
+	@sudo docker-compose exec dev \
+		bash -c 'cd /system/service && cargo +nightly udeps --workspace'
 	@echo "===== Finish ====="
 
 # Cryptographic review
 crev:
-	@echo "===== Reviewing dependencies ====="
+	@echo "===== Reviewing core dependencies ====="
 	@sudo docker-compose exec dev \
-		cargo crev verify --recursive --show-all
+		bash -c 'cd /system/core && cargo crev verify --show-all'
+	@echo "===== Finish ====="
+	@echo "===== Reviewing auth_server dependencies ====="
+	@sudo docker-compose exec dev \
+		bash -c 'cd /system/auth_server && cargo crev verify --recursive --show-all'
+	@echo "===== Finish ====="
+	@echo "===== Reviewing datastore dependencies ====="
+	@sudo docker-compose exec dev \
+		bash -c 'cd /system/datastore && cargo crev verify --recursive --show-all'
+	@echo "===== Finish ====="
+	@echo "===== Reviewing service dependencies ====="
+	@sudo docker-compose exec dev \
+		bash -c 'cd /system/service && cargo crev verify --recursive --show-all'
 	@echo "===== Finish ====="
 
 # Audit dependencies
 audit:
-	@echo "===== Auditing common ====="
+	@echo "===== Auditing core ====="
 	@sudo docker-compose exec dev \
-		bash -c 'cd /common && cargo audit fix --dry-run'
+		bash -c 'cd /system/core && cargo audit fix --dry-run'
 	@echo "===== Finish ====="
 	@echo "===== Auditing auth-server ====="
 	@sudo docker-compose exec dev \
-		bash -c 'cd /auth_server && cargo audit fix --dry-run'
+		bash -c 'cd /system/auth_server && cargo audit fix --dry-run'
 	@echo "===== Finish ====="
 	@echo "===== Auditing backend ====="
 	@sudo docker-compose exec dev \
-		bash -c 'cd /backend && cargo audit fix --dry-run'
+		bash -c 'cd /system/service/backend && cargo audit fix --dry-run'
 	@echo "===== Finish ====="
 	@echo "===== Auditing frontend ====="
 	@sudo docker-compose exec dev \
-		bash -c 'cd /frontend && cargo audit fix --dry-run'
+		bash -c 'cd /system/service/frontend && cargo audit fix --dry-run'
 	@echo "===== Finish ====="
 	@echo "===== Auditing entity ====="
 	@sudo docker-compose exec dev \
-		bash -c 'cd /entity && cargo audit fix --dry-run'
+		bash -c 'cd /system/datastore/entity && cargo audit fix --dry-run'
 	@echo "===== Finish ====="
 	@echo "===== Auditing migration ====="
 	@sudo docker-compose exec dev \
-		bash -c 'cd /migration && cargo audit fix --dry-run'
+		bash -c 'cd /system/datastore/migration && cargo audit fix --dry-run'
 	@echo "===== Finish ====="
