--- a/dev/docker/service/dev/Dockerfile
+++ b/dev/docker/service/dev/Dockerfile
@@ -2,3 +2,5 @@
 # Development container.
 ################################################################################
 FROM rust_base AS base
+
+RUN cargo install --locked sea-orm-cli grass
