--- a/dev/docker/service/frontend/Dockerfile
+++ b/dev/docker/service/frontend/Dockerfile
@@ -8,4 +8,4 @@ RUN apt-get install -y libssl-dev pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
 RUN rustup target add wasm32-unknown-unknown
-RUN cargo install --locked trunk grass
+RUN cargo install --locked trunk
