--- a/dev/.env.example
+++ b/dev/.env.example
@@ -10,7 +10,6 @@ FRONTEND_PORT=9000
 BACKEND_PORT=9001
 AUTH_SERVER_PORT=8080
 POSTGRES_PORT=5432
-MIGRATION_PORT=5433
 
 # Endpoints
 APPLICATION_URL=http://frontend:9000
@@ -24,7 +23,7 @@ DB_HOST=postgres
 DB_NAME=meower
 DB_USER=meower
 DB_PASSWORD=meower
-DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
+DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}?sslmode=disable
 
 
 ################################################################################
