--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -106,7 +106,7 @@ services:
     tty: true
 
   ##############################################################################
-  # Table definition
+  # Output table definitions
   ##############################################################################
   tbls:
     container_name: meower_tbls
