--- a/dev/docker/service/dev/Dockerfile
+++ b/dev/docker/service/dev/Dockerfile
@@ -3,4 +3,5 @@
 ################################################################################
 FROM rust_base AS base
 
+RUN rustup  component add rustfmt
 RUN cargo install --locked sea-orm-cli grass
