--- a/dev/system/core/Cargo.toml
+++ b/dev/system/core/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 [dependencies]
 axum = "0.6.20"
 axum-extra = { version = "0.8.0", features = ["cookie"] }
+chrono = "0.4.31"
 regex = "1.10.2"
 jsonwebtoken = "9.1.0"
-chrono = "0.4.31"
+once_cell = "1.18.0"
 serde = "1.0.193"
 uuid = { version = "1.6.1", features = ["v4"] }
 serde_json = "1.0.108"
