--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - ${FRONTEND_PORT}:9000
     volumes:
       - ./system/assets:/system/assets
+      - ./system/config:/system/config
       - ./system/core:/system/core
       - ./system/service/frontend:/system/service/frontend
     env_file: .env
@@ -50,6 +51,7 @@ services:
       - ${BACKEND_PORT}:9001
     volumes:
       - ./system/assets:/system/assets
+      - ./system/config:/system/config
       - ./system/core:/system/core
       - ./system/service/backend:/system/service/backend
       - ./system/datastore:/system/datastore
@@ -72,6 +74,7 @@ services:
       - ${AUTH_SERVER_PORT}:8080
     volumes:
       - ./system/assets:/system/assets
+      - ./system/config:/system/config
       - ./system/auth_server:/system/auth_server
       - ./system/core:/system/core
       - ./system/datastore:/system/datastore
