feat: Add SMTP server

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -109,6 +109,16 @@ services:
     tty: true
 
   ##############################################################################
+  # SMTP server
+  ##############################################################################
+  smtp:
+    container_name: meower_smtp
+    image: mailhog/mailhog:latest
+    ports:
+      - ${MAILHOG_PORT}:8025
+      - ${SMTP_PORT}:1025
+
+  ##############################################################################
   # Output table definitions
   ##############################################################################
   tbls:
