--- a/dev/system/auth_server/Cargo.toml
+++ b/dev/system/auth_server/Cargo.toml
@@ -19,3 +19,4 @@ sea-orm = { version = "0.12.6", features = [
     "sqlx-postgres"
 ]}
 accept-language = "3.1.0"
+lettre = { version = "0.11.2", feature = ["builder"] }
