feat: Implement email sending

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -67,6 +67,7 @@ ARGON2_PHC_SALT=vdWiJxX0iWZI2ncJ
 ################################################################################
 EMAIL_FROM=meower@meower.com
 EMAIL_SENDER=Meower
-SMTP_HOST=smtp
+SMTP_TLS=false
+SMTP_HOST=mail
 SMTP_USER=meower
 SMTP_PASSWORD=password
