--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -97,7 +97,7 @@ services:
     ports:
       - ${POSTGRES_PORT}:5432
     volumes:
-      - ./docker/service/postgres/data:/var/lib/postgresql/data
+      - pg-data:/var/lib/postgresql/data
     env_file: .env
     environment:
       POSTGRES_DB: ${DB_NAME}
@@ -111,12 +111,17 @@ services:
   ##############################################################################
   # SMTP server
   ##############################################################################
-  smtp:
+  mail:
     container_name: meower_smtp
     image: mailhog/mailhog:latest
     ports:
       - ${MAILHOG_PORT}:8025
       - ${SMTP_PORT}:1025
+    environment:
+      MH_STORAGE: maildir
+      MH_MAILDIR_PATH: /tmp
+    volumes:
+      - mailhog-data:/tmp
 
   ##############################################################################
   # Output table definitions
@@ -133,3 +138,8 @@ services:
     depends_on:
       - postgres
     tty: true
+
+
+volumes:
+  pg-data:
+  mailhog-data:
