--- a/dev/system/service/frontend/Cargo.toml
+++ b/dev/system/service/frontend/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2021"
 
 
 [dependencies]
-sycamore = "0.8.2"
+meower_core = { version = "0.1.0", path = "../../core" }
+meower_entity = { version = "0.1.0", path = "../../datastore/entity" }
+reqwest = "0.11.22"
+serde = "1.0.192"
+serde_json = "1.0.108"
+sycamore = { version = "0.8.2", features = ["suspense"] }
 sycamore-router = "0.8.0"
